--- a/gb/24/8/8/n14307275.md
+++ b/gb/24/8/8/n14307275.md
@@ -9,24 +9,24 @@
 	<p>【大纪元2024年08月08日讯】8月8日（周四），巴黎夏季奥运会进入第13天，今天的比赛非常激烈，有25枚金牌被佼佼者赢得。</p>
 <p>截至奥运比赛日结束，美国代表队的总奖牌数达到103枚，居奖牌榜榜首。</p>
 <h3><strong>以下是8月8日北美时间19点00分更新的巴黎奥运奖牌榜：</strong></h3>
-<figure id="attachment_14307661" aria-describedby="caption-attachment-14307661" style="width: 451px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307661-Screenshot-2024-08-08-at-7.00.01-PM.jpg"><img decoding="async" class=" wp-image-14307661" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307661-Screenshot-2024-08-08-at-7.00.01-PM.jpg" alt="" width="451" b="745" /></a><figcaption id="caption-attachment-14307661" class="wp-caption-text">数据来源：巴黎奥运官网。（大纪元制图）</figcaption></figure>
-<h3><b>美国男篮逆转胜出晋级决赛</b></h3>
-<figure id="attachment_14307653" aria-describedby="caption-attachment-14307653" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307653-AFP__20240808__36CV48L__v1__HighRes__BasketballOlyParis2024UsaSrb-e1723156550195.jpg"><img decoding="async" class="size-full wp-image-14307653" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307653-AFP__20240808__36CV48L__v1__HighRes__BasketballOlyParis2024UsaSrb-e1723156550195.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307653" class="wp-caption-text">2024年8月8日，巴黎Bercy体育馆，2024年巴黎奥运会男子篮球半决赛美国对塞尔维亚的比赛中，美国队4号球员Stephen Curry运球。(Paul Ellis/AFP)</figcaption></figure>
-<p>男子篮球半决赛中，美国男篮对阵塞尔维亚男篮，前两节结束后美国队以43:54落后塞尔维亚队11分，但美国队奋力追击，实现逆转，最终以95:91的比分赢得比赛，晋级决赛。决赛他们将对阵东道主——法国男篮。</p>
-<h3><strong>印尼选手夺金 中国选手石智勇挺举失败憾别奥运</strong></h3>
-<figure id="attachment_14307657" aria-describedby="caption-attachment-14307657" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307657-AFP__20240808__36CW2DC__v1__HighRes__WeightliftingOlyParis2024Medals-e1723157027341.jpg"><img decoding="async" class="size-full wp-image-14307657" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307657-AFP__20240808__36CW2DC__v1__HighRes__WeightliftingOlyParis2024Medals-e1723157027341.jpg" alt="" width="600" b="409" /></a><figcaption id="caption-attachment-14307657" class="wp-caption-text">2024年8月8日，巴黎南巴黎竞技场，2024年巴黎奥运会男子73公斤级举重比赛结束后，金牌得主印尼选手Rizki Juniansyah（中）、银牌得主泰国选手Weeraphon Wichuma（左）和铜牌得主保加利亚选手Bozhidar Dimitrov Andreev在领奖台上合照。(Miguel Medina/AFP)</figcaption></figure>
+<figure id="attachment_14307661" aria-describedby="caption-attachment-14307661" style="width: 504px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307661-Screenshot-2024-08-08-at-7.00.01-PM.jpg"><img decoding="async" class="size-full wp-image-14307661" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307661-Screenshot-2024-08-08-at-7.00.01-PM.jpg" alt="" width="504" b="833" /></a><figcaption id="caption-attachment-14307661" class="wp-caption-text">数据来源：巴黎奥运官网。（大纪元制图）</figcaption></figure>
+<p><b>美国男篮逆转胜出晋级决赛</b></p>
+<figure id="attachment_14307653" aria-describedby="caption-attachment-14307653" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307653-AFP__20240808__36CV48L__v1__HighRes__BasketballOlyParis2024UsaSrb-e1723156550195.jpg"><img decoding="async" class="size-full wp-image-14307653" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307653-AFP__20240808__36CV48L__v1__HighRes__BasketballOlyParis2024UsaSrb-e1723156550195.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307653" class="wp-caption-text">2024年8月8日，巴黎Bercy体育馆，2024年巴黎奥运会男子篮球半决赛美国对塞尔维亚的比赛中，美国队4号球员Stephen Curry运球。 (Paul Ellis/AFP)</figcaption></figure>
+<p>男子篮球半决赛中，美国男篮对阵塞尔维亚男篮，前两节结束后美国队以43-54落后塞尔维亚队11分，但美国队奋力追击，实现逆转，最终以95-91的比分赢得比赛，晋级决赛。决赛他们将对阵东道主——法国男篮。</p>
+<p><strong>印尼选手夺金 中国选手石智勇挺举失败憾别奥运</strong></p>
+<figure id="attachment_14307657" aria-describedby="caption-attachment-14307657" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307657-AFP__20240808__36CW2DC__v1__HighRes__WeightliftingOlyParis2024Medals-e1723157027341.jpg"><img decoding="async" class="size-full wp-image-14307657" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307657-AFP__20240808__36CW2DC__v1__HighRes__WeightliftingOlyParis2024Medals-e1723157027341.jpg" alt="" width="600" b="409" /></a><figcaption id="caption-attachment-14307657" class="wp-caption-text">2024年8月8日，巴黎南巴黎竞技场，2024年巴黎奥运会男子73公斤级举重比赛结束后，金牌得主印尼选手Rizki Juniansyah (C)、银牌得主泰国选手 Weeraphon Wichuma (左) 和铜牌得主保加利亚选手Bozhidar Dimitrov Andreev在领奖台上合照。 (Miguel Medina/AFP)</figcaption></figure>
 <p>在男子73公斤级比赛中，21岁的印尼选手Rizki Juniansyah以354分的总成绩赢得金牌。</p>
 <p>泰国选手Weeraphon Wichuma以346分的总成绩获得银牌，保加利亚选手Bozhidar Dimitrov Andreev获得铜牌，他的总成绩是344分。</p>
-<h3><b>日本悍将夺得女子自由式</b><b>53</b><b>公斤级金牌</b></h3>
+<p><b>日本悍将夺得女子自由式</b><b>53</b><b>公斤级金牌</b></p>
 <figure id="attachment_14307658" aria-describedby="caption-attachment-14307658" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307658-AFP__20240808__36CV8J4__v1__HighRes__WrestlingOlyParis2024-e1723157216693.jpg"><img decoding="async" class="size-full wp-image-14307658" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307658-AFP__20240808__36CV8J4__v1__HighRes__WrestlingOlyParis2024-e1723157216693.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307658" class="wp-caption-text">8月8日，2024年巴黎奥运会期间，在Champ-de-Mars Arena举行的女子自由式摔跤53公斤级比赛颁奖仪式上，金牌得主、日本选手Akari Fujinami与她的奖牌合影。(Punit Paranjpe/AFP)</figcaption></figure>
 <p>日本摔跤选手Akari Fujinami延续她的连胜势头，在巴黎奥运会女子自由式53公斤级决赛中夺金。</p>
 <p>这位20岁的选手以技术优势轻松赢得与厄瓜多尔选手Lucia Yepez Guzman的金牌争夺战。Fujinami赢得了10分，而她的对手却一分未得，这位日本选手兴奋地跳到她父亲（也是她的教练）的身边欢庆。</p>
 <p>中国选手庞倩玉在半决赛中不敌日本选手，进入铜牌赛后获得铜牌。</p>
-<h3><b>8</b><b>日美国田径斩获三金三银两铜</b></h3>
-<figure id="attachment_14307660" aria-describedby="caption-attachment-14307660" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307660-AFP__20240808__36CT76T__v1__HighRes__AthleticsOlyParis2024-e1723157496192.jpg"><img decoding="async" class="size-full wp-image-14307660" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307660-AFP__20240808__36CT76T__v1__HighRes__AthleticsOlyParis2024-e1723157496192.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307660" class="wp-caption-text">2024年巴黎奥运会男子110米跨栏决赛结束后，女子跳远铜牌得主、美国选手Jasmine Moore（左）与金牌得主美国选手Grant Holloway合照。(Ben Stansall/AFP)</figcaption></figure>
+<p><b>8</b><b>日美国田径斩获三金三银两铜</b></p>
+<figure id="attachment_14307660" aria-describedby="caption-attachment-14307660" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307660-AFP__20240808__36CT76T__v1__HighRes__AthleticsOlyParis2024-e1723157496192.jpg"><img decoding="async" class="size-full wp-image-14307660" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307660-AFP__20240808__36CT76T__v1__HighRes__AthleticsOlyParis2024-e1723157496192.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307660" class="wp-caption-text">2024年巴黎奥运会男子110米跨栏决赛结束后，女子跳远铜牌得主美国选手Jasmine Moore（左）与金牌得主美国选手Grant Holloway合照。 (Ben Stansall/AFP)</figcaption></figure>
 <p>美国奥运代表队今天在田径项目中获得三金三银两铜的好成绩。</p>
 <p>在女子400米跨栏决赛中，世界纪录保持者、美国选手Sydney McLaughlin-Levrone不负众望获得金牌，美国选手Anna Cockrell获得银牌，奥运冠军、荷兰选手Femke Bol获得铜牌。</p>
-<p>在男子110米跨栏决赛中，美国选手Grant Holloway和队友Daniel Roberts包揽了金银，牙买加选手Rasheed Broadbell获得铜牌。</p>
+<p>在男子110米跨栏决赛中，美国选手Grant Holloway和队友Daniel Roberts包揽了金银, 牙买加选手Rasheed Broadbell获得铜牌。</p>
 <p>此外，女子跳远决赛中Tara Davis-Woodhall获得金牌，Jasmine Moore获得铜牌；男子200米决赛Kenneth Bednarek获得银牌，Noah Lyles获得铜牌。</p>
 <h3><b>台湾举重女神郭婞淳带伤出征</b><b> </b><b>仍夺铜</b></h3>
 <figure id="attachment_14307584" aria-describedby="caption-attachment-14307584" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307584-AFP__20240808__36CM9WP__v1__HighRes__WeightliftingOlyParis2024Medals-e1723144844629.jpg"><img decoding="async" class="size-full wp-image-14307584" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307584-AFP__20240808__36CM9WP__v1__HighRes__WeightliftingOlyParis2024Medals-e1723144844629.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307584" class="wp-caption-text">2024年8月8日，巴黎南巴黎竞技场，2024年巴黎奥运会女子59公斤级举重比赛结束后，铜牌得主台湾选手郭婞淳在领奖台上与奖牌合照。(Miguel Medina/AFP)</figcaption></figure>
@@ -35,22 +35,22 @@
 <p>郭婞淳在里约奥运摘铜，东京奥运拿下金牌，今天在巴黎奥运59公斤级，以抓举105公斤、挺举130公斤、总和235公斤的成绩，获得铜牌。她是台湾首位连续3届奥运夺牌的运动员。</p>
 <p>中国选手罗诗芳以总和241公斤的成绩获得金牌，加拿大选手Maude Charron以总和236公斤的成绩获得银牌。</p>
 <h3><b>单车名将</b><b>Thomas</b><b>夺得男子全能金牌</b><b> </b><b>法国人喜出望外</b></h3>
-<figure id="attachment_14307585" aria-describedby="caption-attachment-14307585" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307585-AFP__20240808__36CQ7ZV__v1__HighRes__CyclingTrackOlyParis2024-e1723145067181.jpg"><img decoding="async" class="size-full wp-image-14307585" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307585-AFP__20240808__36CQ7ZV__v1__HighRes__CyclingTrackOlyParis2024-e1723145067181.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307585" class="wp-caption-text">2024年8月8日，法国选手Benjamin Thomas赢得2024年巴黎奥运会男子场地自行车全能赛积分赛冠军后庆祝。(Sebastien Bozon/AFP)</figcaption></figure>
+<figure id="attachment_14307585" aria-describedby="caption-attachment-14307585" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307585-AFP__20240808__36CQ7ZV__v1__HighRes__CyclingTrackOlyParis2024-e1723145067181.jpg"><img decoding="async" class="size-full wp-image-14307585" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307585-AFP__20240808__36CQ7ZV__v1__HighRes__CyclingTrackOlyParis2024-e1723145067181.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307585" class="wp-caption-text">2024年8月8日，法国选手Benjamin Thomas赢得2024年巴黎奥运会男子场地自行车全能赛积分赛冠军后庆祝。 (Sebastien Bozon/AFP)</figcaption></figure>
 <p>法国选手Benjamin Thomas在奥运场地自行车项目的男子全能赛积分赛中赢得金牌，他与葡萄牙的世界冠军Iuri Leitao之间的激烈角逐，令国家自行车馆（National Velodrome）内的观众们为他们不断喝采。</p>
 <p>按照多项全能赛的惯例，最后的积分赛将决定金牌的归属。就在Thomas冲到榜首时，他的自行车失去控制，滑下赛道。不过他很快冷静地检查了自己，然后重新加入比赛，但他的比赛服却破了个洞。</p>
 <p>在观众的欢呼声中，Thomas成功追上了刚刚超越他的Leitao，并在绕过最后一个弯道时开始庆祝，因为他知道自己在积分榜上的领先优势已不可撼动。</p>
 <h3><b>60</b><b>年来最年轻短跑选手赢得男子</b><b>200</b><b>米金牌</b></h3>
-<figure id="attachment_14307587" aria-describedby="caption-attachment-14307587" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307587-AFP__20240808__36CQ739__v1__HighRes__AthleticsOlyParis2024-e1723145395685.jpg"><img decoding="async" class="size-full wp-image-14307587" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307587-AFP__20240808__36CQ739__v1__HighRes__AthleticsOlyParis2024-e1723145395685.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307587" class="wp-caption-text">2024年8月8日，2024年巴黎奥运会男子200米决赛，博茨瓦纳选手Letsile Tebogo赢得冠军后庆祝。(Jewel Samad/AFP)</figcaption></figure>
+<figure id="attachment_14307587" aria-describedby="caption-attachment-14307587" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307587-AFP__20240808__36CQ739__v1__HighRes__AthleticsOlyParis2024-e1723145395685.jpg"><img decoding="async" class="size-full wp-image-14307587" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307587-AFP__20240808__36CQ739__v1__HighRes__AthleticsOlyParis2024-e1723145395685.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307587" class="wp-caption-text">2024年8月8日，2024年巴黎奥运会男子200米决赛，博茨瓦纳选手Letsile Tebogo赢得冠军后庆祝。 (Jewel Samad/AFP)</figcaption></figure>
 <p>博茨瓦纳21岁的Letsile Tebogo在万众期待的200米决赛中赢得金牌，为非洲大陆赢得这一项目的首枚金牌。Tebogo跑出了19.46秒的成绩，他也是六十多年来在这个项目上赢得金牌的最年轻选手。</p>
 <p>美国队获得两枚奖牌，Kenny Bednarek在大部分时间与Tebogo并驾齐驱，最后以19.62秒的成绩完赛，Noah Lyles则以19.70秒的成绩名列第三。</p>
 <h3><b>法国男子篮球队晋级奥运金牌赛</b></h3>
 <figure id="attachment_14307590" aria-describedby="caption-attachment-14307590" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307590-AFP__20240808__36CP844__v2__HighRes__TopshotBasketballOlyParis2024FraGer-e1723145518387.jpg"><img decoding="async" class="size-full wp-image-14307590" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307590-AFP__20240808__36CP844__v2__HighRes__TopshotBasketballOlyParis2024FraGer-e1723145518387.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307590" class="wp-caption-text">2024年8月8日，巴黎贝尔西体育馆（Bercy Arena），2024年巴黎奥运会男子篮球半决赛中，法国对德国，法国8号选手Isaia Cordinier在法国队赢得胜利后庆祝。(Damien Meyer/AFP)</figcaption></figure>
-<p>法国男子篮球队在半决赛中以73:69击败德国队，距离奥运金牌只差一场胜利。</p>
+<p>法国男子篮球队在半决赛中以73-69击败德国队，距离奥运金牌只差一场胜利。</p>
 <p>法国队8号队员Isaia Cordinier在最后一秒以罚球为主队赢得胜利。Guerschon Yabusele为法国队贡献了17分，Victor Wembanyama则贡献11分、4次助攻和7个篮板。</p>
 <p>法国队将在8月10日的金牌赛中对阵塞尔维亚队或美国队。</p>
 <h3><b>摩洛哥创造历史</b><b> </b><b>首夺奥运足球奖牌</b></h3>
 <figure id="attachment_14307592" aria-describedby="caption-attachment-14307592" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307592-AFP__20240808__36CL6XP__v1__HighRes__FblOlyParis2024EgyMar-e1723145762184.jpg"><img decoding="async" class="size-full wp-image-14307592" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307592-AFP__20240808__36CL6XP__v1__HighRes__FblOlyParis2024EgyMar-e1723145762184.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307592" class="wp-caption-text">2024年8月8日，巴黎2024年奥运会期间，在南特博茹瓦尔（La Beaujoire）体育场举行的埃及对摩洛哥男子足球铜牌赛中，摩洛哥前锋9号Soufiane Rahimi（右）庆祝攻入开场球。(Alain Jocard/AFP)</figcaption></figure>
-<p>在巴黎奥运男子足球铜牌赛中，摩洛哥足球队以6:0大胜埃及队，赢得该国有史以来第一枚奥运足球奖牌。</p>
+<p>在巴黎奥运男子足球铜牌赛中，摩洛哥足球队以6-0大胜埃及队，赢得该国有史以来第一枚奥运足球奖牌。</p>
 <p>摩洛哥9号前锋Soufiane Rahimi成为赛场上的明星，他分别在上半场和下半场各进一球，成为该场比赛的最佳射手。</p>
 <p>这场胜利对散居在法国的庞大摩洛哥人来说意义重大，包括队长Achraf Hakimi在内的多位摩洛哥球员都在法国生活和踢球，为这场胜利增添了额外的感情色彩。</p>
 <p>这也是埃及自1964年以来在奥运足球赛中的最佳成绩。</p>
@@ -59,7 +59,7 @@
 <p>印尼选手Veddriq Leonardo在巴黎奥运会男子速度攀岩赛中赢得一枚金牌，为他的国家赢得了历史性的奥运冠军，而美国选手Sam Watson虽然在最后一场比赛中创下4.74秒世界纪录，但只赢得一枚铜牌。</p>
 <p>27岁的Leonardo从四分之一决赛开始，每场比赛的成绩都有进步，最终以4.75秒的个人最佳成绩夺得金牌。中国选手伍鹏以4.77秒的成绩获得银牌。</p>
 <h3><b>朝鲜运动员未收到奥运会赞助商赠送三星智能手机</b></h3>
-<figure id="attachment_14307656" aria-describedby="caption-attachment-14307656" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307656-AFP__20240731__367X2FN__v1__HighRes__JudoOlyParis2024JudoOlyParis2024-e1723156858587.jpg"><img decoding="async" class="size-full wp-image-14307656" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307656-AFP__20240731__367X2FN__v1__HighRes__JudoOlyParis2024JudoOlyParis2024-e1723156858587.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307656" class="wp-caption-text">2024年7月31日，巴黎，朝鲜体育部长兼朝鲜奥委会主席金日国（Kim Il Guk）出席在巴黎Champ-de-Mars Arena举行的2024年巴黎奥运会柔道比赛。(Luis Robayo/AFP)</figcaption></figure>
+<figure id="attachment_14307656" aria-describedby="caption-attachment-14307656" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/08/id14307656-AFP__20240731__367X2FN__v1__HighRes__JudoOlyParis2024JudoOlyParis2024-e1723156858587.jpg"><img decoding="async" class="size-full wp-image-14307656" src="https://i.epochtimes.com/assets/uploads/2024/08/id14307656-AFP__20240731__367X2FN__v1__HighRes__JudoOlyParis2024JudoOlyParis2024-e1723156858587.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14307656" class="wp-caption-text">2024年7月31日，巴黎，北韩体育部长兼北韩奥委会主席金日国（Kim Il Guk）出席在巴黎Champ-de-Mars Arena举行的2024年巴黎奥运会柔道比赛。(Luis Robayo/AFP)</figcaption></figure>
 <p>路透社报导，国际奥林匹克委员会（IOC）周四证实，在2024年巴黎奥运会上，朝鲜队员并没有收到奥运会赞助商三星（Samsung）免费赠送给所有运动员的智能手机。</p>
 <p>这家韩国电子公司是国际奥委会的顶级赞助商，为所有10,500名参赛选手提供一部智能手机，并允许他们在回国后继续使用。</p>
 <p>根据奥运会主办单位的名单，朝鲜代表队共有14名运动员参加巴黎奥运会，将参加7个运动项目的竞赛。</p>
@@ -107,14 +107,14 @@
 <p><em>（具体比赛时间会因比赛场地和其它原因有所变化）</em></p>
 <p>责任编辑：李皓月#</p>
 	
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305111.md#1">奥运羽球麟洋配夺金 基隆简家蚵仔煎500份免费</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305959.md#1">奥运自行车公路赛 哈佛高材生为美摘40年来首金</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
-<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/29/n10097243.md#1" target="_blank">大学教授炼法轮功身心受益 反迫害控告江泽民</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/1/n10752911.md#1" target="_blank">智诚：“除夕宴”在恸哭声中进行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
@@ -125,17 +125,16 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306761.md#1">【中国禁闻】巴黎奥运中共乱象多 乒乓女单决赛内斗</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305388.md#1">越来越多美国家庭因游览迪士尼而负债</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
-<hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/8/8/n14307275.htm">【更新】2024年巴黎奥运奖牌榜 8月8日</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307275.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
